vume foton e aktivitetit dhe kode refactoring

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -81,7 +81,7 @@
         android:layout_marginLeft="68dp"
         android:layout_marginTop="84dp"
         android:ems="10"
-        android:hint="hour"
+        android:hint="ora"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
@@ -98,7 +98,7 @@
         android:layout_marginRight="72dp"
         android:layout_marginBottom="4dp"
         android:ems="10"
-        android:hint="minute"
+        android:hint="minutat"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,11 +124,11 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="76dp"
-        android:layout_height="32dp"
+        android:layout_width="85dp"
+        android:layout_height="27dp"
         android:layout_marginTop="88dp"
         android:fontFamily="monospace"
-        android:text="Timetable"
+        android:text="Intenerari"
         android:textColor="#151111"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
