--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,43 +9,55 @@
     tools:layout_editor_absoluteX="37dp"
     tools:layout_editor_absoluteY="21dp">
 
-    <!--    <EditText-->
-    <!--        android:id="@+id/editText2"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:ems="10"-->
-    <!--        android:inputType="textPersonName"-->
-    <!--        android:text="Name"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/button2"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="77dp"
-        android:layout_height="68dp"
-        android:background="@drawable/round_button"
-        android:onClick="goNextPage"
-        android:text="Timetable"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+    <!-- E shtuar -->
+    <RelativeLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        tools:context=".MainActivity"
+        tools:layout_editor_absoluteX="0dp">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="180dp"
-        android:layout_height="352dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
-        android:layout_marginBottom="160dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_editor_absoluteX="352dp"
-        app:srcCompat="@drawable/ab12" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="84dp"
+            android:layout_height="77dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="74dp"
+            android:layout_marginLeft="74dp"
+            android:layout_marginTop="624dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/round_button"
+            android:onClick="goNextPage1"
+            android:text="Cronometer" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="77dp"
+            android:layout_height="68dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="101dp"
+            android:layout_marginLeft="101dp"
+            android:layout_marginTop="618dp"
+            android:layout_marginEnd="75dp"
+            android:layout_marginRight="75dp"
+            android:layout_marginBottom="45dp"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:background="@drawable/round_button"
+            android:onClick="goNextPage"
+            android:text="Orari" />
+
+
+    </RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
