--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/download1"
+    android:background="@drawable/lepuri"
     tools:context=".MainActivity"
     tools:layout_editor_absoluteX="37dp"
     tools:layout_editor_absoluteY="21dp">
 
 
     <!-- E shtuar -->
+
     <RelativeLayout
         android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="114dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.256"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.192"
         tools:context=".MainActivity"
-        tools:layout_editor_absoluteX="0dp">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="84dp"
-            android:layout_height="77dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="74dp"
-            android:layout_marginLeft="74dp"
-            android:layout_marginTop="624dp"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/round_button"
-            android:onClick="goNextPage1"
-            android:text="Cronometer" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="77dp"
-            android:layout_height="68dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="101dp"
-            android:layout_marginLeft="101dp"
-            android:layout_marginTop="618dp"
-            android:layout_marginEnd="75dp"
-            android:layout_marginRight="75dp"
-            android:layout_marginBottom="45dp"
-            android:layout_toEndOf="@+id/button"
-            android:layout_toRightOf="@+id/button"
-            android:background="@drawable/round_button"
-            android:onClick="goNextPage"
-            android:text="Orari" />
+        tools:ignore="MissingConstraints">
 
 
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="132dp"
+        android:layout_height="85dp"
 
-</android.support.constraint.ConstraintLayout>
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/round_button"
+        android:onClick="goNextPage1"
+        android:text="Cronometer"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.968" />
+
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="92dp"
+        android:layout_height="91dp"
+        android:background="@drawable/round_button"
+        android:onClick="goNextPage"
+        android:text="Orari"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.108"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.985" />
+
+    <ImageView
+        android:id="@+id/coinImageView"
+        android:layout_width="44dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/coin_image"
+        app:layout_constraintBottom_toBottomOf="@+id/coinTextView"
+        app:layout_constraintEnd_toStartOf="@+id/coinTextView"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/coinTextView"
+        android:layout_width="61dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="4dp"
+        android:text="Coins: 0"
+        android:textColor="@color/colorPrimaryDark"
+
+
+        android:textSize="53px"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+
+
+    <Button
+        android:id="@+id/toggleButton"
+        android:layout_width="93dp"
+        android:layout_height="110dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/round_button"
+        android:onClick="toggleClothesWindow"
+        android:text="👕"
+        android:textSize="94px"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/coinTextView"
+        app:layout_constraintVertical_bias="0.841" />
+
+    <LinearLayout
+        android:id="@+id/clothesLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/cloth1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/clothes1"
+            android:onClick="selectClothes"/>
+
+        <ImageView
+            android:id="@+id/cloth2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/cloth2"
+            android:onClick="selectClothes"/>
+
+        <ImageView
+            android:id="@+id/cloth3"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/cloth3"
+            android:onClick="selectClothes"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Time: --:--"
+        android:textSize="18sp"
+        android:visibility="gone"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="8dp" />
+
+
+
+    <!-- Start Game Button -->
+
+    <!-- Square container (Initially hidden) -->
+
+    <Button
+        android:id="@+id/startGameButton"
+        android:layout_width="106dp"
+        android:layout_height="70dp"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/round_button"
+        android:text=" 🎮"
+        android:textSize="94px"
+        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/coinImageView"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <RelativeLayout
+        android:id="@+id/gameSquare"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:background="@android:color/darker_gray"
+        android:visibility="gone">
+
+        <!-- Icon inside the square -->
+        <ImageView
+            android:id="@+id/iconInsideSquare"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/whackmole" />
+
+        <!-- New trigger icon -->
+        <ImageView
+            android:id="@+id/quizTrigger"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/quiz_icon"
+            android:contentDescription="Start Quiz" />
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/rabbitImageView"
+        android:layout_width="220dp"
+        android:layout_height="337dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout"
+        app:srcCompat="@drawable/rabbit" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
